5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1595_842.log
== SUBMITION (2019-03-31 19:50:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = int(input("Digite um numero com quatro algarismos: "))
soma = 0
while (var > 0):
    resto = var % 10
    var = var // 10
    soma = soma + resto

print(soma)

-- EXECUTION TIME:
0.20435
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:58:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = int(input("Digite um numero com quatro algarismos: "))
soma = 0
while (var > 0):
    resto = var % 10
    var = var // 10
    soma = soma + resto

print(soma)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:58:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = int(input("Digite um numero com quatro algarismos: "))
soma = 0
while (var > 0):
    resto = var % 10
    var = var // 10
    soma = soma + resto

print(soma)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:08:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = int(input("Digite um numero com quatro algarismos: "))

while (var > 0):
    resto = var % 10
    var = var // 10
    soma = soma + resto

print(soma)

-- EXECUTION TIME:
0.173236
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/842/main.py", line 9, in <module>
    soma = soma + resto
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:11:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = int(input("Digite um numero com quatro algarismos: "))

    resto = var % 10
    var = var // 10
    resultado = resto

print(soma)

-- ERROR:
File "XXXX", line 6
    resto = var % 10
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:13:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = int(input("Digite um numero com quatro algarismos: "))
soma=0
    resto = var % 10
    var = var // 10
    resultado = soma+resto

print(soma)

-- EXECUTION TIME:
0.139519
-- ERROR:
  File "/home/codebench/codes/1595/842/main.py", line 6
    resto = var % 10
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:13:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = int(input("Digite um numero com quatro algarismos: "))
soma=0
    resto = var % 10
    var = var // 10
    resultado = soma+resto

print(soma)

-- EXECUTION TIME:
0.195772
-- ERROR:
  File "/home/codebench/codes/1595/842/main.py", line 6
    resto = var % 10
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:14:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = int(input("Digite um numero com quatro algarismos: "))
soma = 0
while (var > 0):
    resto = var % 10
    var = var // 10
    soma = soma + resto

print(soma)


-- EXECUTION TIME:
0.132468
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
